# AD

./: .gitignore  README.md  configure_ldaps.py  inspect_new_dc.py  install_ad_ds.py  list_endpoints.py  register_new_dc.py  sync_cii_dc.py  sync_cii_members.py  test_anon_ldap.py  test_dc88.py  test_dfs_debug.py  test_dfs_subdir.py  test_hr_dir.py  test_ldap_enhanced.py  test_ldaps.py  test_login_admin.py  test_login_cii.py  test_md4.py  test_ntlm_debug.py  test_ntlm_final.py  test_ntlm_ldap.py  test_ntlm_ldap2.py  test_ntlm_v3.py  test_psql.py  test_sasl_digest.py  test_sasl_v2.py  test_starttls_ntlm.py  test_winexe.py  test_winexe2.py  test_winexe_new.py  verify_api.py  verify_final.py  verify_stage7.py  verify_stage8.py
backend/: alembic.ini  init_db.py  pyproject.toml  seed_enterprise.py  seed_identity_center.py  seed_remote_access.py
backend/app/: main.py
backend/app/adapters/: dc_management_adapter.py  defender_adapter.py  dfs_adapter.py  dfs_replication_adapter.py  entra_id_adapter.py  exchange_adapter.py  jwt_token_adapter.py  kerberos_adapter.py  ldap_adapter.py  oidc_adapter.py  pg_audit_adapter.py  pki_adapter.py  print_adapter.py  redis_cache_adapter.py  remote_access_adapter.py  saml_adapter.py  sdwan_adapter.py  secure_print_adapter.py  system_monitor_adapter.py  tier_security_adapter.py  veeam_adapter.py  vpn_adapter.py  zabbix_adapter.py
backend/app/core/: config.py  database.py  deps.py  middleware.py
backend/tests/: test_audit_service.py  test_auth_service.py  test_org_sync_service.py  test_permission_service.py  test_site_awareness_service.py
(+240 files in other folders)
